40425859-fasternet_dw.out

Lmod is automatically replacing "intel/2020.1.217" with "gcc/9.3.0".

Lmod Warning:
-------------------------------------------------------------------------------
The following dependent module(s) are not currently loaded: python/3.10.2
(required by: ipykernel/2023b, scipy-stack/2023b)
-------------------------------------------------------------------------------




Due to MODULEPATH changes, the following have been reloaded:
  1) mii/1.1.2

The following have been reloaded with a version change:
  1) StdEnv/2023 => StdEnv/2020
  2) blis/0.9.0 => blis/0.8.1
  3) flexiblas/3.3.1 => flexiblas/3.0.4
  4) gcc/12.3 => gcc/9.3.0
  5) gcccore/.12.3 => gcccore/.9.3.0
  6) gentoo/2023 => gentoo/2020
  7) libfabric/1.18.0 => libfabric/1.15.1
  8) openmpi/4.1.5 => openmpi/4.0.3
  9) ucx/1.14.1 => ucx/1.8.0

Looking in links: /cvmfs/soft.computecanada.ca/custom/python/wheelhouse/gentoo2020/avx2, /cvmfs/soft.computecanada.ca/custom/python/wheelhouse/gentoo/avx2, /cvmfs/soft.computecanada.ca/custom/python/wheelhouse/gentoo2020/generic, /cvmfs/soft.computecanada.ca/custom/python/wheelhouse/gentoo/generic, /cvmfs/soft.computecanada.ca/custom/python/wheelhouse/generic
Requirement already satisfied: pip in /home/zimozhou/envs/yoloEnv/lib/python3.8/site-packages (25.0+computecanada)
Tue Feb 18 22:31:20 2025       
+-----------------------------------------------------------------------------------------+
| NVIDIA-SMI 550.144.03             Driver Version: 550.144.03     CUDA Version: 12.4     |
|-----------------------------------------+------------------------+----------------------+
| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |
| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |
|                                         |                        |               MIG M. |
|=========================================+========================+======================|
|   0  NVIDIA A100-SXM4-40GB          Off |   00000000:81:00.0 Off |                    0 |
| N/A   31C    P0             52W /  400W |       1MiB /  40960MiB |      0%      Default |
|                                         |                        |             Disabled |
+-----------------------------------------+------------------------+----------------------+
                                                                                         
+-----------------------------------------------------------------------------------------+
| Processes:                                                                              |
|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |
|        ID   ID                                                               Usage      |
|=========================================================================================|
|  No running processes found                                                             |
+-----------------------------------------------------------------------------------------+
Job ID: 40425859
starting training...
  File "train_on_cc.py", line 24
    lr0=0.001,
    ^
SyntaxError: invalid syntax
